--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "mysql": "^2.17.1",
     "passport": "^0.4.0",
     "pug": "2.0.0-beta11",
     "winston": "^3.2.1"
