--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "start": "node -r esm app.js",
-    "dev": "ENV=dev nodemon -r esm app.js"
+    "dev": "nodemon -r esm app.js"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
