Upload Document of all assignment
Update Link for Project Document

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon -r esm app.js"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
