--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
     "winston": "^3.2.1"
   },
