--- a/package.json
+++ b/package.json
@@ -9,5 +9,12 @@
     "client": "cd client/ && npm start",
     "server": "cd server/ && npm run dev",
     "start": "npm run client && npm run server"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.5.2",
+    "bootstrap": "^4.3.1",
+    "react": "^0.14.9",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-mdl": "^1.11.0"
   }
 }
