--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.1",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "is-empty": "^1.2.0",
