--- a/client/package.json
+++ b/client/package.json
@@ -4,21 +4,23 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.7.1",
+    "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "is-empty": "^1.2.0",
     "jwt-decode": "^2.2.0",
+    "material-ui-icons": "^1.0.0-beta.36",
+    "mui-datatables": "^2.13.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.9.0",
+    "react-mdl": "^1.11.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "@material-ui/core": "^4.5.2",
-    "bootstrap": "^4.3.1",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-mdl": "^1.11.0"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
